fixed email alignment

--- a/6_Buber6.css
+++ b/6_Buber6.css
@@ -343,7 +343,7 @@ float:right;
 	margin-right:0px;
 	margin-left:0px;
 	margin-bottom:0px;
-	text-align:left;
+	text-align:center;
 	bottom:0;
 	height:20px;
 	background-color:white;
